fix truncate css class

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -152,7 +152,7 @@ body {
   margin-bottom: 2ex;
 }
 
-.truncate, .truncate * {
+.truncate {
   overflow-x: hidden;
   text-overflow: ellipsis;
 }
